# punctum

./: .gitattributes  .gitignore  .pylintrc  Cargo.toml  README.md  build_octrees.sh  build_sh_log.txt  bunny.ply  bunny_256.ply  calc_sh.py  environment.yaml  evaluate.py  evaluate_model.sh  evaluation.ipynb  export.ipynb  figures.ipynb  gen_dataset.sh  gen_dataset_time.txt  gen_datasets.sh  neuschwanstein_pos.txt  render.ply  sh_check.ipynb  sphere.ply  train.py  viewer.cap
.cargo/: config.toml
dataset/: bunny.ply  calc_sh.py  dataset_creation.ipynb  dataset_creation.py  sh.py  vis.ply
dataset/sh_py/: coeficient_builder.py  evaluator.py  legendre.py  statistics.py
dataset/toy/: bunny.ply
figures/: dataset_stats.ipynb  model_metrics.ipynb  render_datasets.sh  render_thresholds.sh  sh_bunny.ipynb  sh_example.ipynb  sh_plots.ipynb  sh_timing.yaml
figures/loss/: graph.ipynb  run-8192 octants l=4 rgb final 2_val-tag-loss_camera.csv  run-8192 octants l=4 rgb final no_rescaling_val-tag-loss_camera.csv
pointnet/: calc_sh.py  dataset.py  ds_analysis.ipynb  loss.py  metrics.py  model.py  pointclouds.py  sh.py  train.ipynb  train.py  utils.py  vis.ipynb
src/: avg_color.rs  camera.rs  frame.rs  io.rs  lib.rs  main.rs  octree.rs  pc_render.rs  ply.rs  pointcloud.rs  renderer.rs  scene.rs  sh.rs  tee.rs  vertex.rs
src/renderer/: comparison.ipynb  debug.rs  frame.rs  mod.rs  octree_renderer.rs  pc_renderer.rs  scene_renderer.rs  uniform.rs
src/renderer/shaders/: avg_color.comp  image_reduction.comp  lines.frag  lines.vert  pointcloud.frag  pointcloud.vert  pointcloud_sh.vert
src/renderer/wrapper/: framebuffer.rs  mod.rs  swapchain.rs  uniform.rs  viewport.rs
tests/: avg_color.ipynb  gen_shs.py
