[package]
name = "punctum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26"

cgmath = "0.18.0"
bytemuck = { version = "1.5.1", features = ["derive"] }
ply-rs = "0.1.3"
image = "0.24"

[lib]
name = "punctum"
path = "src/lib.rs"

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"
